--- a/src/components/SearchResultsContainer/SearchResultsContainer.css
+++ b/src/components/SearchResultsContainer/SearchResultsContainer.css
@@ -1,3 +1,11 @@
 .video-layout {
+	display: flex;
+	text-align: center;
+	border-radius: 25px;
+	border: 5px solid #edeeeb;
+	flex-direction: column;
+	padding: 20px;
+	margin: 5px;
 	margin-left: 20px;
+	vertical-align: middle;
 }
